2008-05-06  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* VERSION: Upped version number to 0.5.1.

2008-02-15  Mark Ellis <mark@mpellis.org.uk>

	* added man page for unshield

2008-01-09  Mark Ellis <mark@mpellis.org.uk>

	* started changelog
	* added LICENSE to EXTRA_DIST
	* added cabfile.h to libunshield_la_SOURCES
