@@ -1,8 +1,0 @@
-*.la
-*.lo
-.deps
-.libs
-Makefile
-Makefile.in
-stamp-h1
-unshield_config.h*
